[package]
name = "fractalgui"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.13.1"
egui_glow = "0.28.0"
egui = "0.28.0"
eframe = "0.28.0"
log = "0.4"
env_logger = "0.11.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.69"

[profile.release]
opt-level = 's'
strip = true
