[package]
name = "fractalgui"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.13.1"
egui_glow = "0.28.0"
egui = "0.28.0"
eframe = "0.28.0"
log = "0.4"
env_logger = "0.11.6"
egui_extras = "0.28"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "Url", "Window", "File", "FilePropertyBag" ] }

[profile.release]
opt-level = 's'
strip = true
